# Minimal-Basis-Solver

./: Grammar.y  Main.hs  MinimalBasis.cabal  MinimalBasis.hs  Tokens.x  readme.md  test1.txt  test1Out.txt  test2.txt  test2Out.txt  test3.txt  test3Out.txt  test4.txt  test4Out.txt  test5.txt  test5Out.txt  test6.txt  test6Out.txt  test7.txt  test7Out.txt  test8.txt  test8Out.txt  test9.txt  test9Out.txt
