name:                MinimalBasis
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
--license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable fds
  build-tools:         alex,happy
  main-is:             Main.hs
  other-modules:       Tokens,Grammar,MinimalBasis
  -- other-extensions:    
  build-depends:       array,
                       base >=4.8,
                       bytestring,
                       bytestring-trie,
                       mtl,
                       split >= 0.2.3

  -- hs-source-dirs:      
  default-language:    Haskell2010